[gd_scene load_steps=9 format=3 uid="uid://wrxbkg1jgt4a"]

[ext_resource type="PackedScene" uid="uid://bx4q585nhsx4e" path="res://src/player/weapon.tscn" id="1_5hxmg"]
[ext_resource type="Script" path="res://src/player/weapons/spear/spear.gd" id="2_arcp0"]
[ext_resource type="Script" path="res://src/player/weapons/spear/spear_attack.gd" id="4_p14yv"]
[ext_resource type="AudioStream" uid="uid://cyhcllk4t63m1" path="res://assets/player/weapons/spear_hit.wav" id="5_xtef2"]
[ext_resource type="Texture2D" uid="uid://b7he1juxywred" path="res://assets/player/weapons/spear_effect-Sheet.png" id="5_xyav1"]

[sub_resource type="Animation" id="Animation_dlb5o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w3hfq"]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vie5"]
_data = {
"RESET": SubResource("Animation_dlb5o"),
"attack": SubResource("Animation_w3hfq")
}

[node name="Spear" instance=ExtResource("1_5hxmg")]
script = ExtResource("2_arcp0")
collision_launch_power = 300

[node name="SpriteFront" parent="." index="0"]
visible = true

[node name="AttackFront" type="Node2D" parent="." index="3"]
script = ExtResource("4_p14yv")

[node name="Effect" type="Sprite2D" parent="AttackFront" index="0"]
visible = false
position = Vector2(23, -1)
texture = ExtResource("5_xyav1")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackFront" index="1"]
libraries = {
"": SubResource("AnimationLibrary_8vie5")
}

[node name="Hitchecks" type="Node2D" parent="AttackFront" index="2"]
visible = false

[node name="Hitcheck" type="RayCast2D" parent="AttackFront/Hitchecks" index="0"]
position = Vector2(2, -2)
target_position = Vector2(28, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="Hitcheck2" type="RayCast2D" parent="AttackFront/Hitchecks" index="1"]
position = Vector2(2, 2)
target_position = Vector2(28, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="AttackUp" type="Node2D" parent="." index="4"]
script = ExtResource("4_p14yv")

[node name="Effect" type="Sprite2D" parent="AttackUp" index="0"]
visible = false
rotation = -1.5708
texture = ExtResource("5_xyav1")
offset = Vector2(23, 1)
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackUp" index="1"]
libraries = {
"": SubResource("AnimationLibrary_8vie5")
}

[node name="Hitchecks" type="Node2D" parent="AttackUp" index="2"]
visible = false

[node name="Hitcheck" type="RayCast2D" parent="AttackUp/Hitchecks" index="0"]
position = Vector2(2, -2)
target_position = Vector2(0, -28)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="Hitcheck2" type="RayCast2D" parent="AttackUp/Hitchecks" index="1"]
position = Vector2(-1, -2)
target_position = Vector2(0, -28)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="AttackDown" type="Node2D" parent="." index="5"]
script = ExtResource("4_p14yv")

[node name="Effect" type="Sprite2D" parent="AttackDown" index="0"]
visible = false
rotation = 1.5708
texture = ExtResource("5_xyav1")
offset = Vector2(23, -4)
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackDown" index="1"]
libraries = {
"": SubResource("AnimationLibrary_8vie5")
}

[node name="Hitchecks" type="Node2D" parent="AttackDown" index="2"]
visible = false

[node name="Hitcheck1" type="RayCast2D" parent="AttackDown/Hitchecks" index="0"]
position = Vector2(-1, 2)
target_position = Vector2(0, 28)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="Hitcheck2" type="RayCast2D" parent="AttackDown/Hitchecks" index="1"]
position = Vector2(2, 2)
target_position = Vector2(0, 28)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="Cooldown" type="Timer" parent="." index="6"]
wait_time = 0.3
one_shot = true

[node name="HitSound" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource("5_xtef2")
volume_db = -4.941

[connection signal="animation_finished" from="AttackFront/AnimationPlayer" to="AttackFront" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AttackUp/AnimationPlayer" to="AttackUp" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AttackDown/AnimationPlayer" to="AttackDown" method="_on_animation_player_animation_finished"]
